README : add badges

--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,8 @@
 
 🌗 Android app to experiment the dark theme
 
-[![Build Status](https://travis-ci.org/ghusta/android-dark-theme-tester.svg?branch=master)](https://travis-ci.org/ghusta/android-dark-theme-tester) [![GitHub release](https://img.shields.io/github/release/ghusta/android-dark-theme-tester.svg)](https://github.com/ghusta/android-dark-theme-tester/releases)
+image:https://travis-ci.org/ghusta/android-dark-theme-tester.svg?branch=master["Build Status", link="https://travis-ci.org/ghusta/android-dark-theme-tester"]
+image:https://img.shields.io/github/release/ghusta/android-dark-theme-tester.svg["GitHub release", link="https://github.com/ghusta/android-dark-theme-tester/releases"]
 
 == Overview
 
