--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DarkTheme Tester</string>
+    <string name="app_name">Dark Theme Tester</string>
     <string name="action_settings">Settings</string>
     <string name="action_choose_theme">Choose theme</string>
     <string name="action_open_github_project">Let me see the source code</string>
@@ -7,5 +7,7 @@
     <string name="choice_light_mode">Light</string>
     <string name="choice_dark_mode">Dark</string>
     <string name="choice_system_mode">Set by Battery Saver</string>
+
+    <string name="msg_welcome_hint">Go to menu in action bar and select a theme</string>
 
 </resources>
