--- a/README.adoc
+++ b/README.adoc
@@ -19,3 +19,9 @@ When the device enters https://support.google.com/android/answer/9079240?hl=en[b
 * https://developer.android.com/guide/topics/ui/look-and-feel/darktheme[Guide > Dark theme]
 * https://www.android.com/android-10/#q-dark-theme[Dark Theme feature in Android 10]
 * https://material.io/develop/android/theming/dark/[Material Design > Android > Dark Theme]
+
+=== Download
+
+image:https://play.google.com/intl/en_gb/badges/static/images/badges/en_badge_web_generic.png["Get it on Google Play", link="https://play.google.com/store/apps/details?id=fr.husta.android.dark_theme_tester"]
+
+Google Play and the Google Play logo are trademarks of Google LLC.
